# minpack-builder

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  libminpack.def  minpack.def  minpack.h
.github/workflows/: archive-on-macos.yaml  archive-on-ubuntu.yaml  archive-on-ubuntu.yaml__  archive-on-windows.yaml  archive_intel_on_windows.yaml  archive_on_ubuntu.yaml  archive_on_ubuntu.yaml__  gfortran-on-macos.yaml  gfortran-on-ubuntu.yaml  gfortran-on-windows.yaml  intel-fortran-on-ubuntu.yaml  intel-fortran-on-ubuntu.yaml__  intel-fortran-on-windows.yaml  llvm-flang-gcc-like-on-windows.yaml  llvm-flang-gcc-like-on-windows.yaml__  llvm-flang-msvc-like-on-windows.yaml  llvm-flang-msvc-like-on-windows.yaml__  llvm-flang-on-macos.yaml  llvm-flang-on-ubuntu.yaml  llvm-flang-on-ubuntu.yaml__  release.yaml
cmake/: CreateMinpackBinaryArchive.cmake.in  CreateMinpackSourceArchive.cmake.in  DownloadMinpackSources.cmake  MinpackSources.cmake  UninstallMinpack.cmake.in  minpack-config-version.cmake.in  minpack-config.cmake.in  minpack.pc.in
doc/: Build-and-Install-on-Linux-GFortran.md  Build-and-Install-on-Linux-Intel-Fortran-Compiler-ifx.md  Build-and-Install-on-Linux.md  Build-and-Install-on-Windows-GFortran.md  Build-and-Install-on-Windows-Intel-Fortran-Compiler-ifx.md  Build-and-Install-on-Windows-LLVM-Flang-MSVC-like.md  Build-and-Install-on-Windows-LLVM-Flang-new-MSVC-like.md  Build-and-Install-on-macOS-GFortran.md  Build-and-Install-on-macOS-LLVM-Flang.md  CMake-Package.md  Configuration-Options.md  Home.md  Project-Targets.md  README.md
